test/fixtures/public/fail/semantic/badArguments.jmm
/*  REASON:
    Variable assignments to literals must have the literal be the variable's type.
*/
import static io.println(int) void;

class T {
    public static void main(String[] a) { 
      io.println(10);
    }

    public int foo(boolean a){
        this.foo(10);
        this.foo(true,20);
        return 1;
    }
}
